Added Composer + phpdotenv for .env files

--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
-<Files Database.php>
-	Order Allow,Deny
-	Deny from all
-</Files>
+#<Files Database.php>
+#	Order Allow,Deny
+#	Deny from all
+#</Files>
