--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
     "require": {
-        "vlucas/phpdotenv": "^5.4"
+        "vlucas/phpdotenv": "^5.4",
+        "ext-json": "*",
+        "ext-curl": "*"
     }
 }
