--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
         "vlucas/phpdotenv": "^5.4",
         "ext-json": "*",
         "ext-curl": "*",
-        "ext-pdo": "*"
+        "ext-pdo": "*",
+        "ramsey/uuid": "^4.2"
     }
 }
